@@ -1,5 +1,8 @@
 2003-08-02  Martin Schaffner  <martin.schaffner@epfl.ch>
 
+	* arch/linux/linuxnet.c, main/multi.c, main/multibot.c: bigendian
+	networking fixes
+
 	* cfile/cfile.c: revert to always using custom fgets
 
 	* main/endlevel.c, main/mission.c: handle missing exit sequence
